--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^2.3.0",
     "@turf/simplify": "^5.1.5",
-    "babel-preset-env": "^1.7.0",
     "mapbox-gl": "^0.49.0",
     "mapbox-gl-geocoder": "^2.0.1",
-    "sass": "^1.14.1",
     "terraformer-arcgis-parser": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "cssnano": "^4.1.4"
+    "babel-preset-env": "^1.7.0",
+    "cssnano": "^4.1.4",
+    "sass": "^1.14.3"
   }
 }
