--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^2.3.0",
     "@turf/simplify": "^5.1.5",
+    "@turf/turf": "^5.1.6",
     "mapbox-gl": "^0.49.0",
     "terraformer-arcgis-parser": "^1.1.0"
   },
