--- a/package.json
+++ b/package.json
@@ -1,39 +1,36 @@
 {
-  "name": "LITCH",
-  "version": "1.0.0",
+  "name": "affordable-housing-map",
+  "version": "2.0.0",
   "description": "Application to help find affordable housing in the City of Detroit.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CityOfDetroit/radio-patrols.git"
-  },
+  "main": "build/index.js",
   "keywords": [
-    "Affordable",
+    "Affordable Housing",
     "Housing",
     "HUD",
-    "LITCH"
+    "js",
+    "esri",
+    "leaflet"
   ],
+  "bugs": {
+    "url": "https://github.com/CityOfDetroit/affordable-housing-map/issues"
+  },
+  "homepage": "https://github.com/CityOfDetroit/affordable-housing-map#readme",
   "author": "Edgar Montes",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/CityOfDetroit/LITCH-.git"
-  },
-  "homepage": "https://github.com/CityOfDetroit/LITCH-#readme",
-  "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^2.3.0",
-    "@turf/simplify": "^5.1.5",
-    "@turf/turf": "^5.1.6",
-    "mapbox-gl": "^0.53.0",
-    "terraformer-arcgis-parser": "^1.1.0"
+  "scripts": {
+    "start": "parcel src/index.html --https --no-cache -p 3000 --open",
+    "test": "./node_modules/.bin/cypress open",
+    "build": "parcel build src/index.js --no-cache --public-url '.' --no-source-maps"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.7.2",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "cssnano": "^4.1.10",
-    "sass": "^1.17.2"
-  }
+    "sass": "^1.26.12"
+  },
+  "dependencies": {
+    "@turf/turf": "^5.1.6",
+    "esri-leaflet": "^2.5.0",
+    "leaflet": "^1.7.1",
+    "moment": "^2.29.0"
+  },
+  "browserslist": "> 0.25%, not dead"
 }
