--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@turf/turf": "^5.1.6",
     "esri-leaflet": "^2.5.0",
     "leaflet": "^1.7.1",
-    "moment": "^2.29.0"
+    "moment": "^2.29.0",
+    "terraformer-arcgis-parser": "^1.1.0"
   },
   "browserslist": "> 0.25%, not dead"
 }
