--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
+    "parcel-bundler": "^1.12.5",
     "sass": "^1.26.12"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@turf/turf": "^5.1.6",
     "esri-leaflet": "^2.5.0",
     "leaflet": "^1.7.1",
